<resources>
    <string name="app_name">AppFragments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valprincipal">Principal</string>
    <string name="valgaleria">Galeria</string>
    <string name="valcompartir">Compartir</string>
    <string name="valherramientas">Herramientas</string>
    <string name="titulofragprincipal">Principal</string>
    <string name="titulofraggaleria" >Galeria</string>
    <string name="titulofragcompartir">Compartir</string>
    <string name="titulofragherramientas">Herramientas</string>
    <string name="valtvtitulo">Formulario Fragment</string>
    <string name="valtvnumero">Ingrese un número</string>
    <string name="valcalcular">CALCULAR</string>
</resources>
